[package]
name = "fix_audio"
version = "0.1.0"
edition = "2024"

[dependencies]
ebur128 = "0.1.10"
hound = "3.5.1"
itertools = "0.14.0"
realfft = { version = "3.5.0", features = ["avx", "neon", "sse"] }
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = ["opt-simd", "all"] }

[profile.release]
opt-level = 3
lto = true
incremental = true
codegen-units = 1
debug = false
panic = "abort"

[profile.flamegraph]
inherits = "release"
debug = true

[lints.clippy]
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
restriction = "warn"
