[package]
name = "fix_audio"
version = "0.7.1"
edition = "2024"

[dependencies]
ebur128 = "0.1.10"
hound = "3.5.1"
itertools = "0.14.0"
lofty = "0.22.4"
mimalloc = { version = "0.1.48", features = ["v3", "override", "extended"] }
rayon = "1.11.0"
realfft = { version = "3.5.0", features = ["avx", "neon", "sse"] }
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = ["opt-simd", "all"] }

[profile.release]
opt-level = 3
lto = true
incremental = false # Disabled since incremental builds have stopped improving compile times for some reason
codegen-units = 1
debug = false
panic = "abort"

[lints.clippy]
complexity =    {level = "warn", priority = -1}
correctness =   {level = "warn", priority = -1}
nursery =   {level = "warn", priority = -1}

pedantic =  {level = "warn", priority = -1}
cast_precision_loss =       "allow" # reason = "allow u64 as f64, likey no precision loss"
cast_possible_truncation =  "allow" # reason = "allow using f64 for precision, then truncating to f32"

perf =  {level = "warn", priority = -1}
style = {level = "warn", priority = -1}

suspicious =    {level = "warn", priority = -1}
blanket_clippy_restriction_lints =  "allow" # reason = "whitelist seens better than blacklist" 

restriction =   {level = "warn", priority = -1}
as_conversions =                "allow" # reason = "some conversions are required, other cast_* lints are still used"
cast_sign_loss =                "allow" # reason = "only positive/unsigned values used" 
#expect_used = "allow" # reason = "currently questioning whether to handle all expect errors or not"
float_arithmetic =              "allow" # reason = "float arithmetic is required"
implicit_return =               "allow" # reason = "make things rusty"
missing_docs_in_private_items = "allow" # reason = "lint isn't very specific"
print_stdout =                  "allow" # reason = "printing to console is required"
question_mark_used =            "allow" # reason = "no need to add additional error info"
semicolon_outside_block =       "allow" # reason = "personal preference"
separated_literal_suffix =      "allow" # reason = "personal preference"
single_call_fn =                "allow" # reason = "allow breaking long functions into smaller functions"
#unwrap_in_result = "allow" # reason = "currently questioning whether to handle all unwrap errors or not"
#unwrap_used = "allow" # reason = "currently questioning whether to handle all unwrap errors or not"
use_debug =                     "allow" #  reason = "pretty print is good enough"
